--- a/earphones.html
+++ b/earphones.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Audiophile</title>
+  <title>Audiophile | Earphones</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-  <header class="header">
+  <header class="header header--black">
     <div class="container">
       <div class="header-inner">
         <span class="burger-menu"></span>
@@ -41,25 +41,37 @@
     </div>
   </header>
 
-  <section class="hero">
+  <section class="page-hero">
     <div class="container">
-      <div class="hero-inner">
-        <p class="status hero-status">
-          New product
-        </p>
-        <h1 class="primary-heading hero-heading">
-          XX99 Mark II<br>
-          Headphone
-        </h1>
-        <p class="text text--light hero-text">
-          Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
-        </p>
-        <a class="btn" href="#">See product</a>
+      <h2 class="secondary-heading page-heading">Speakers</h2>
+    </div>
+  </section>
+
+  <section class="section-products">
+    <div class="container">
+      <div class="products">
+        <div class="product">
+          <div class="product-img yx1-img"></div>
+          <div class="product-info">
+            <p class="status status--active product__status">
+              New product
+            </p>
+            <h2 class="secondary-heading product__heading">
+              YX1 WIRELESS <br>
+              EARPHONES
+            </h2>
+            <p class="text product__text">
+              Tailor your listening experience with bespoke dynamic drivers from the new YX1 Wireless Earphones. Enjoy
+              incredible high-fidelity sound even in noisy environments with its active noise cancellation feature.
+            </p>
+            <a class="btn product__btn" href="#">See product</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="section-cards shop-cards">
+  <section class="shop-cards">
     <div class="container">
       <div class="shop-cards__inner">
         <div class="shop-card">
@@ -93,47 +105,7 @@
     </div>
   </section>
 
-  <section class="speaker1">
-    <div class="container">
-      <div class="speaker1-inner">
-        <picture class="speaker1__img">
-          <source media="(max-width: 600px )" srcset="./images/speaker1-img__phone.png" width="173" height="207">
-          <source media="(max-width: 900px )" srcset="./images/speaker1-img__tablet.png" width="197" height="237">
-          <img src="./images/speaker1-img.png" width="410" height="473" alt="speaker image">
-        </picture>
-        <div class="speaker1__info">
-          <h1 class="primary-heading speaker1__heading">ZX9 <br> SPEAKER</h1>
-          <p class="text text--light speaker1__text">
-            Upgrade to premium speakers that are phenomenally built to deliver truly remarkable sound.
-          </p>
-          <a class="btn btn--dark speaker1__btn" href="#">See product</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="speaker2">
-    <div class="container">
-      <div class="speaker2-inner">
-        <h4 class="tertiary-heading speaker2__heading">ZX7 Speaker</h4>
-        <a class="btn btn--light speaker2__btn" href="#">See product</a>
-      </div>
-    </div>
-  </section>
-
-  <section class="earphone-block">
-    <div class="container">
-      <div class="earphone-block__inner">
-        <div class="earphone-img"></div>
-        <div class="earphone-text">
-          <h4 class="tertiary-heading earphone-text__heading">YX1 Earphoes</h4>
-          <a class="btn btn--light earphone-text__btn" href="#">see product</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="comment">
+  <section class="comment product-comment">
     <div class="container">
       <div class="comment-inner">
         <div class="comment-left">
