product-details started

--- a/product-detail.html
+++ b/product-detail.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Audiophile | Earphones</title>
+  <title>Product | Headphones</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -42,37 +42,80 @@
     </div>
   </header>
 
-  <section class="page-hero">
+  <section class="section-products product-content">
     <div class="container">
-      <h2 class="secondary-heading page-heading">Speakers</h2>
-    </div>
-  </section>
-
-  <section class="section-products">
-    <div class="container">
+      <a class="text btn--back" href="#">Go back</a>
       <div class="products">
         <div class="product">
-          <div class="product-img yx1-img"></div>
+          <div class="product-img xx99-2-img"></div>
           <div class="product-text">
             <p class="status status--active product__status">
               New product
             </p>
             <h2 class="secondary-heading product__heading">
-              YX1 WIRELESS <br>
-              EARPHONES
+              XX99 Mark II<br>
+              Headphone
             </h2>
             <p class="text product__text">
-              Tailor your listening experience with bespoke dynamic drivers from the new YX1 Wireless Earphones. Enjoy
-              incredible high-fidelity sound even in noisy environments with its active noise cancellation feature.
+              The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines your premium headphone
+              experience by reproducing the balanced depth and precision of studio-quality sound.
             </p>
+            <span class="product__price">$ 2,999</span>
             <a class="btn product__btn" href="#">See product</a>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <section class="product-info">
+    <div class="container">
+      <div class="product-info__inner">
+        <div class="features">
+          <h3 class="tertiary-heading">Features</h3>
+          <p class="text product__text">
+            Featuring a genuine leather head strap and premium earcups, these headphones deliver superior comfort for
+            those who like to enjoy endless listening. It includes intuitive controls designed for any situation.
+            Whether you’re taking a business call or just in your own personal space, the auto on/off and pause features
+            ensure that you’ll never miss a beat.
+          </p>
+          <p class="text product__text">
+            The advanced Active Noise Cancellation with built-in equalizer allow you to experience your audio world on
+            your terms. It lets you enjoy your audio in peace, but quickly interact with your surroundings when you need
+            to. Combined with Bluetooth 5. 0 compliant connectivity and 17 hour battery life, the XX99 Mark II
+            headphones gives you superior sound, cutting-edge technology, and a modern design aesthetic.
+          </p>
+        </div>
+        <div class="box">
+          <h3 class="tertiary-heading">In the box</h3>
+          <ul class="box-list">
+            <li class="box-list__item">Headphone unit</li>
+            <li class="box-list__item">Replacement earcups</li>
+            <li class="box-list__item">User manual</li>
+            <li class="box-list__item">3.5mm 5m audio cable</li>
+            <li class="box-list__item">Travel bag</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <section class="shop-cards cards">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <section class="shop-cards">
     <div class="container">
       <div class="shop-cards__inner">
         <div class="shop-card">
