--- a/headphones.html
+++ b/headphones.html
@@ -14,21 +14,21 @@
     <div class="container">
       <div class="header-inner">
         <span class="burger-menu"></span>
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
           <img class="logo__img" src="images/logo.svg" alt="logo brand">
         </a>
         <nav class="nav header-nav">
           <ul class="nav-list header-list">
-            <li class="nav-list__item header-list__item"><a href="#" class="nav-list__link header-list__link">home</a>
+            <li class="nav-list__item header-list__item"><a href="index.html" class="nav-list__link header-list__link">home</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">headphones</a>
+              <a href="headphones.html" class="nav-list__link header-list__link">headphones</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">speakers</a>
+              <a href="speakers.html" class="nav-list__link header-list__link">speakers</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">earphones</a>
+              <a href="earphones.html" class="nav-list__link header-list__link">earphones</a>
             </li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
       <div class="products">
         <div class="product">
           <div class="product-img xx99-2-img"></div>
-          <div class="product-info">
+          <div class="product-text">
             <p class="status status--active product__status">
               New product
             </p>
@@ -70,7 +70,7 @@
 
         <div class="product">
           <div class="product-img xx99-1-img"></div>
-          <div class="product-info">
+          <div class="product-text">
             <h2 class="secondary-heading product__heading">
               XX99 Mark I <br>
               Headphones
@@ -85,7 +85,7 @@
 
         <div class="product">
           <div class="product-img xx59-img"></div>
-          <div class="product-info">
+          <div class="product-text">
             <h2 class="secondary-heading product__heading">
               XX59<br>
               Headphone
@@ -101,7 +101,7 @@
     </div>
   </section>
 
-  <section class="shop-cards">
+  <section class="shop-cards cards">
     <div class="container">
       <div class="shop-cards__inner">
         <div class="shop-card">
@@ -169,19 +169,19 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-top">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img class="logo__img" src="images/logo.svg" alt="logo brand">
           </a>
           <nav class="nav footer-nav">
             <ul class="nav-list footer-list">
-              <li class="nav-list__item footer-list__item"><a href="#" class="nav-list__link footer-list__link">home</a>
+              <li class="nav-list__item footer-list__item"><a href="index.html" class="nav-list__link footer-list__link">home</a>
               </li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="headphones.html"
                   class="nav-list__link footer-list__link">headphones</a></li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="speakers.html"
                   class="nav-list__link footer-list__link">speakers</a>
               </li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="earphones.html"
                   class="nav-list__link footer-list__link">earphones</a></li>
             </ul>
           </nav>
