--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <div class="container">
       <div class="header-inner">
         <span class="burger-menu"></span>
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
           <img class="logo__img" src="images/logo.svg" alt="logo brand">
         </a>
         <nav class="nav header-nav">
           <ul class="nav-list header-list">
-            <li class="nav-list__item header-list__item"><a href="#" class="nav-list__link header-list__link">home</a>
+            <li class="nav-list__item header-list__item"><a href="index.html" class="nav-list__link header-list__link">home</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">headphones</a>
+              <a href="headphones.html" class="nav-list__link header-list__link">headphones</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">speakers</a>
+              <a href="speakers.html" class="nav-list__link header-list__link">speakers</a>
             </li>
             <li class="nav-list__item header-list__item">
-              <a href="#" class="nav-list__link header-list__link">earphones</a>
+              <a href="earphones.html" class="nav-list__link header-list__link">earphones</a>
             </li>
           </ul>
         </nav>
@@ -167,19 +167,19 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-top">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img class="logo__img" src="images/logo.svg" alt="logo brand">
           </a>
           <nav class="nav footer-nav">
             <ul class="nav-list footer-list">
-              <li class="nav-list__item footer-list__item"><a href="#" class="nav-list__link footer-list__link">home</a>
+              <li class="nav-list__item footer-list__item"><a href="index.html" class="nav-list__link footer-list__link">home</a>
               </li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="headphones.html"
                   class="nav-list__link footer-list__link">headphones</a></li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="speakers.html"
                   class="nav-list__link footer-list__link">speakers</a>
               </li>
-              <li class="nav-list__item footer-list__item"><a href="#"
+              <li class="nav-list__item footer-list__item"><a href="earphones.html"
                   class="nav-list__link footer-list__link">earphones</a></li>
             </ul>
           </nav>
